# sotopia-verifiable

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_QUALITY_REPORT.md  LICENSE  QUALITY_AND_CLEANUP_COMPLETE.md  README.md  VERIFICATION_REPORT.md  data_processor.py  inference_verifiable.py  iterative_training.py  pipeline_diagrams.md  playground_verifiable.py  pyproject.toml  quick_start.sh  requirements.txt  scenario_runner.py  self_play_evaluator.py  setup_training.py  structured_scenario_templates.py  structured_scenarios.json  structured_social_verifier.py  test_self_play.py  train_grpo_verifiable.sh  train_sft_verifiable.sh  training_data_collector.py
.github/: pull_request_template.md
.github/workflows/: lint.yml  tests.yml
config/: werewolf_agent_loop.yaml  werewolf_sft.yaml
data/: werewolf_scenarios.parquet  werewolf_scenarios_test.parquet  werewolf_trajectories_test.parquet
data/werewolf_sft/: full_data.parquet  train.parquet  val.parquet
data/werewolf_sft_processed/: full_data.parquet  train.parquet  val.parquet
examples/: basic_verification.py  train_werewolf.py
patches/: sotopia-local.patch
scenarios/: db_helper.py  scenario_generator.py  scenarios.db
scripts/: collect_trajectories.py  generate_werewolf_scenarios.py  run_expert_iteration.py  train_sft.py
sotopia_verifiable/: __init__.py
sotopia_verifiable/agent_loops/: __init__.py  werewolf_agent_loop.py
sotopia_verifiable/cli/: __init__.py  app.py
sotopia_verifiable/core/: __init__.py  verifiable_game.py
tests/: __init__.py  test_cli.py  test_verifiable_game.py
(+9 files in other folders)
